Fix padding s.t. the header, btns and tabs are left aligned

--- a/src/Components/Results/Results.css
+++ b/src/Components/Results/Results.css
@@ -4,7 +4,7 @@
 
 .results-tab-container {
   background-color: var(--primary-color);
-  padding: 0.75rem 0.75rem 0 0.75rem;
+  padding: 1rem 1rem 0 1rem;
 }
 
 .results-tab {
